--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>React</title>
+    <title>正弦表生成器</title>
   <link rel="shortcut icon" href="favicon.ico"><link href="./css/style.8d676c2a.css" rel="stylesheet"></head>
   <body>
   <div id="app"></div>
