--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>正弦表生成器</title>
-  <link rel="shortcut icon" href="favicon.ico"><link href="./css/style.8d676c2a.css" rel="stylesheet"></head>
+    <title>React</title>
+  <link rel="shortcut icon" href="favicon.ico"><link href="css/style.0e1af3b6.css" rel="stylesheet"></head>
   <body>
   <div id="app"></div>
   <script src="https://cdn.bootcss.com/fetch/2.0.3/fetch.min.js"></script>
-  <script type="text/javascript" src="./js/vendors.938c50e2.js"></script><script type="text/javascript" src="js/bundle.645322bc.js"></script></body>
+  <script type="text/javascript" src="js/vendors.bc0ea347.js"></script><script type="text/javascript" src="js/bundle.b6c5b90c.js"></script></body>
 </html>
